--- a/conda-env.yml
+++ b/conda-env.yml
@@ -1,11 +1,13 @@
-name: mod-site
 channels:
   - conda-forge
+  - defaults
+
 dependencies:
   - python=3.9
   - rdkit
   - requests
   - xlsxwriter
+  - pip
   - pip:
     - cairosvg
     - tqdm
