--- a/conda-env.yml
+++ b/conda-env.yml
@@ -9,8 +9,10 @@ dependencies:
   - xlsxwriter
   - prettytable
   - dash
+  - numpy
   - pip
   - pip:
     - cairosvg
     - tqdm
     - IPython
+    - furl
