--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  template-dash:
+  modsite-dash:
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,16 +8,16 @@ services:
     volumes:
       - ./logs:/app/logs:rw
     ports:
-    - "8081:8081"
+    - "8081:5000"
     networks:
       - default
       - nginx-net
     restart: unless-stopped
     command: /app/run_server.sh
     environment:
-      VIRTUAL_HOST: template.ucsd.edu
-      VIRTUAL_PORT: 8081
-      LETSENCRYPT_HOST: template.ucsd.edu
+      VIRTUAL_HOST: modsite.gnps2.org
+      VIRTUAL_PORT: 5000
+      LETSENCRYPT_HOST: modsite.gnps2.org
       LETSENCRYPT_EMAIL: miw023@ucsd.edu
 
 
