--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: template-dash
+    container_name: modsite-dash
     volumes:
       - ./logs:/app/logs:rw
     ports:
