--- a/conda-env.yml
+++ b/conda-env.yml
@@ -18,4 +18,7 @@ dependencies:
     - furl
     - dash_daq
     - dash-bootstrap-components
+    - pillow
+    - openpyxl
+    - openpyxl-image-loader
     
